test/expected/explain_main_stf_i-c.out
explain static int main()
                   ^
20: error: main() can not be "static" in C
